[package]
name = "klee-rs"
version = "0.1.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"
description = "A safe KLEE API for Rust"
categories = ["no-std", "api-bindings"]
keywords = ["klee", "symbolic", "execution", "api"]
readme = "README.md"
repository = "https://github.com/markhakansson/klee-rs"
license = "MIT"

[dependencies]
cty = "0.2.1"
